# project-starfield

./: .env.example  .gitignore  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
.serena/: project.yml
scripts/: generate-icons.mjs  generate-latest-json.mjs  set-version.mjs
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/keys/: starfield.key.pub
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai_text.rs  beacon.rs  keychain.rs  luna.rs  lyra.rs  mod.rs  pulsar.rs  search.rs  tts.rs
src/components/: AiGlobe.tsx  ClarificationCard.tsx  CommandSuggestions.tsx  ConfirmDeleteModal.tsx  ConstellationAtlas3D.tsx  ConstellationOverlay.tsx  CosmicEntity.tsx  CosmicLogo.tsx  CustomDropdown.tsx  OrbitDatePicker.tsx  RichTextEditor.tsx  SandboxModal.tsx  SplashScreen.tsx  StarField.tsx  StarParticles.tsx  Switch.tsx  TitleBar.tsx  WormholeTransition.tsx
src/hooks/: useVisibilityPausedRAF.ts
src/lib/: constellation-catalog.ts  constellation-registry.ts  luna-prompt.ts  markdown.tsx  memory.ts  orbit-ai.ts  platform.ts  slash-commands.ts  storage.ts  tauri.ts  tts-voices.ts  tts.ts  weather-types.ts  weather.ts
src/pages/: Beacon.tsx  Home.tsx  Hyperlane.tsx  Luna.tsx  Lyra.tsx  Orbit.tsx  Pulsar.tsx  Settings.tsx  Solaris.tsx
src/store/: useAppStore.ts  useBeaconStore.ts  useHyperlaneStore.ts  useLyraStore.ts  useOrbitMeetingStore.ts  useOrbitStore.ts  (+3 more)
(+8 files in other folders)
